[project]
authors = [{ name = "Modular Inc", email = "hello@modular.com" }]
description = "A template for working on Mojo CPU / GPU operations"
name = "mojo-operation-template"
requires-python = ">= 3.9,<3.13"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = [
    "conda-forge",
    "https://conda.modular.com/max-nightly",
    "https://conda.modular.com/max",
    "https://repo.prefix.dev/modular-community",
]
platforms = ["linux-64", "osx-arm64", "linux-aarch64"]

[tool.pixi.tasks]
graph = "python graph.py"
benchmarks = "mojo benchmarks.mojo"
test = "mojo test_correctness.mojo"
debug_amd = "bash debug_amd.sh"
profile_amd = "bash profile_amd.sh"

[tool.pixi.feature.pytest.tasks]
pytest = "pytest"

[tool.pixi.feature.pytest.dependencies]
pytest = ">=8.3.2, <9"

[tool.pixi.dependencies]
max = "==25.3.0.dev2025042905"
bm25s = ">=0.2.12,<0.3"
pystemmer = ">=2.2.0.3,<3"
scipy = ">=1.15.2,<2"

[tool.pixi.environments]
default = { solve-group = "default" }
pytest = { features = ["pytest"], solve-group = "default" }
